# stratis

./: .gitignore  Cargo.toml  readme.md  run-pan-init.sh  run-pan.sh  server.rs
client/: Cargo.toml
client/src/: lib.rs
docs/: chat.md  data_store.md  login.md
docs/design/: mining.md  regions.md  resources.md  ships.md  trade.md
docs/specs/: chat.md  data_store.md  entity.md  events.md  player.md
ffi/: Cargo.toml
ffi/misc/ue4_example/: FFI.cpp  FFI.h
ffi/src/: client.rs  events.rs  lib.rs  timer.rs
pan/: Cargo.toml  readme.md
pan/src/: admin.rs  db.rs  lifecycle.rs  main.rs  postgres.rs
server/: Cargo.toml
server/src/: lib.rs  server.rs  store.rs
server/tests/: integration.rs
shared/: Cargo.toml
shared/src/: chat.rs  client.rs  events.rs  interface.rs  lib.rs  opcode.rs  player.rs
shared/tests/: unit.rs
sql/: create_clients.sql  create_db.sql  create_login.sql  create_msg.sql  create_players.sql  grant_stratis.sql  readme.md
src/: chat.rs  client.rs  distributor.rs  game.rs  lib.rs  main.rs  player.rs  server.rs  store.rs
unity/: Cargo.toml
unity/src/: lib.rs
unity_ffi/: FFI_TESTS.csproj  UnitTest1.cs  Unity_FFI.sln  readme.md
unity_ffi/Assets/: Chat.cs  Client.cs  Timer.cs  ffi.cs
unity_ffi/Assets/Support/: Chat.cs  Client.cs  Events.cs  Timer.cs  ffi.cs
unity_ffi/Properties/: AssemblyInfo.cs
