[package]
name = "stratis-server"
version = "0.1.0"
authors = ["viperscape <chrisfgill@gmail.com>"]
license = "Apache-2.0"

[dependencies]
hmac-sha1 = "^0.1"
uuid = { version = "^0.3", features = ["v4"]}
byteorder = "1"
postgres = { version = "0.13.5", features = ["with-uuid"]}
rand = "0.3.15"
stratis-shared = { path = "../shared" }

imgui = {git = "https://github.com/Gekkio/imgui-rs", version = "0.0.14-pre"}